# python-template

./: .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  PLAN.md  README.md  SECURITY.md  pyproject.toml  renovate.json  sync-manifest.json
.github/: renovate.json5
.github/actions/setup-python/: action.yml
.github/scripts/: check_lint.py  check_package.py  check_security.py  check_types.py  qa.py  setup.ps1  setup.sh
.github/workflows/: auto-release.yml  python-qa.yml  self-update.yml  sync-downstream.yml  template-ci.yml
actions/setup-python/: action.yml
docs/: README.md
docs/decision-records/: 0001-scripts-are-standalone-and-stdlib-only.md  README.md
docs/decision-records/template/: 0001-scripts-are-standalone-and-stdlib-only.md  0002-pull-based-manifest-driven-template-sync.md  0003-python-minimum-version-floor.md  0004-python-package-layout-and-app-anatomy.md  0005-ci-excludes-macos.md
docs/diagrams/: qa-template-sync-flow.mmd
docs/explanation/: documentation-map.md  why-two-layer-pull-sync.md
docs/how-to/: add-a-qa-check.md
docs/reference/: github-token-limitation.md  qa-contract.md
docs/runbooks/: refresh-released-scripts.md
docs/tutorials/: getting-started.md
reference/: extensions.json  gitattributes  gitignore  pre-commit-config.yaml  pyproject.toml  repo-ci.yml  settings.json  tasks.json
scripts/: check_actionlint.py  check_links.py  check_lint.py  check_package.py  check_security.py  check_shellcheck.py  check_spelling.py  check_tests.py  check_types.py  qa.py  setup.ps1  setup.sh  sync.py
src/sample_app/: __init__.py  __main__.py  _contracts.py  config.py  exceptions.py  main.py  validators.py
tests/: conftest.py  test_check_release_drift.py  test_check_scripts.py  test_qa.py  test_sample_app.py  test_scripts.py  test_sync.py
tools/: check_adr_schema.py  check_ai_residue.py  check_docs_layout.py  check_pin_parity.py  check_release_drift.py
