[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my-project"
version = "0.1.0"
description = "A short project description."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
# dependencies = []

[project.optional-dependencies]
dev = [
    "build",
    "codespell",
    "mypy>=1.16",
    "pip-audit",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "ruff>=0.11",
    "twine",
    "validate-pyproject",
]

# [project.scripts]
# my-cli = "my_project.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "S", "SIM", "C4", "PT", "T20", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
"scripts/**" = ["T20", "S603", "S607"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
addopts = "-ra --import-mode=importlib --cov=src --cov-report=term-missing --cov-fail-under=90"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.codespell]
skip = ".venv,dist,*.egg-info,.git,.mypy_cache,.pytest_cache,.ruff_cache"
